--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -20,3 +20,4 @@ reqwest = { version = "0.11.14", features = ["json"] }
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
 uuid = { version = "1.2.2", features = ["v4", "serde"] }
+openssl = { version = "0.10.59", features = ["vendored"] }
